<LinearLayout
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawer"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center_vertical|center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:text="@string/support_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/developer_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textAlignment="center"
            android:textStyle="italic"
            android:text="@string/developer_line1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/developer_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textStyle="bold|italic"
            android:text="@string/developer_line2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_large"
        >
        <TextView
            android:id="@+id/developer_line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:layout_marginTop="@dimen/margin_large"
            android:textAlignment="center"
            android:text="@string/developer_line3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.05"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            >
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/line3ImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/github" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/developer_line4"
                android:layout_margin="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/font_large"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/developer_line4"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.68"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            >
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/support_dialog"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="horizontal"
            >

        <Button
            android:id="@+id/dont_support_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/dont_support"
            />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:orientation="horizontal"-->
            <!--&gt;-->
        <!--<TextView-->
            <!--android:id="@+id/developer_line5"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center_vertical"-->
            <!--android:text="@string/developer_line5"-->
            <!--android:textSize="@dimen/font_normal"-->
            <!--android:textStyle="bold"-->
            <!--android:textAlignment="center"-->
            <!--android:background="@drawable/circle"-->
            <!--/>-->
        <!--</LinearLayout>-->
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/support_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/circle"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
