<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/margin_normal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent">

        <TextView
            android:id="@+id/vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/background"
            android:textSize="@dimen/font_large" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_medium"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_medium"
                android:textSize="@dimen/font_normal"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/card_header_fuel"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/vehicle_fuel"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_medium"
                android:textSize="@dimen/font_normal"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/card_header_cc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/vehicle_cc"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_medium"
                android:textSize="@dimen/font_normal"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/card_header_engine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/vehicle_engine"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_medium"
                android:textSize="@dimen/font_normal"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/card_header_chassis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/vehicle_chasis"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_normal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:paddingBottom="@dimen/margin_medium"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/card_header_owner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/vehicle_owner"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:paddingBottom="@dimen/margin_medium"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/card_header_location"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/vehicle_location"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/expiry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:textColor="@color/background"
            android:textSize="@dimen/font_normal"
            android:id="@+id/vehicle_expiry"
            />
            <ImageButton
                android:id="@+id/vehicle_copy_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_content_copy_black_24dp"
                android:onClick="copyDetails"
                android:layout_alignRight="@id/vehicle_expiry"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />
    </RelativeLayout>

</LinearLayout>